--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,14 +11,13 @@ jobs:
     name: Analyze
     runs-on: ubuntu-latest
     steps:
-    
-name: Checkout code
-    uses: actions/checkout@v3
-    
-name: Initialize CodeQL
-    uses: github/codeql-action/init@v2
-    with:
-      languages: csharp
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-name: Perform CodeQL Analysis
-    uses: github/codeql-action/analyze@v2
+    - name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+      with:
+        languages: csharp
+
+    - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v2
