--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,10 +14,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Set up .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '6.0'  # ou outra versão relevante para o seu projeto
+
+    - name: Restore dependencies
+      run: dotnet restore
+
+    - name: Build the project
+      run: dotnet build
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
         languages: csharp
+
+    - name: Build CodeQL Database
+      run: |
+        codeql database create /home/runner/work/_temp/codeql_databases/csharp --language=csharp --command="dotnet build"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
