--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -20,11 +20,11 @@ jobs:
         dotnet-version: '6.0'  # ou outra versão relevante para o seu projeto
 
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ENA.sln
 
     - name: Build the project
-      run: dotnet build
-
+      run: dotnet build ENA.sln
+      
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
       with:
@@ -32,7 +32,7 @@ jobs:
 
     - name: Build CodeQL Database
       run: |
-        codeql database create /home/runner/work/_temp/codeql_databases/csharp --language=csharp --command="dotnet build"
+        codeql database create /home/runner/work/_temp/codeql_databases/csharp --language=csharp --command="dotnet build ./src/SeuProjeto.sln"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
